# mouse_brain_pipeline

./: .gitignore  README.md  Runinstructions.txt  cellfinder_candidate_coordinates.csv  config.example.yml  config_full_image.yml  config_injection_overrides.yml  coordinate_comparison_results.csv  environment.yml  pyproject.toml
scripts/: _bootstrap.py  annotate_reference_cells.py  audit_candidate_generation_sources.py  audit_cellfinder_sensitivity.py  audit_dataset.py  audit_preliminary_rules.py  audit_run_consistency.py  calibrate_candidate_rules.py  channel_overlay_histograms.py  classify_candidates.py  compare_coordinate_files.py  compare_green_red_candidates.py  debug_injection_mask.py  edit_injection_mask.py  evaluate_candidate_recall.py  injection_centered_radial_analysis.py  make_full_image_config.py  make_previews.py  make_validation_batch.py  overlay_channels.py  pair_correlation_analysis.py  postprocess_candidate_run.py  postrun_pair_correlation.py  prepare_pilot.py  radial_candidate_analysis.py  refine_candidate_size_and_edges.py  refine_candidates_strict.py  render_seven_plane_qc.py  review_candidates.py  run_brainmapper.py  run_candidate_pilot.py  run_pair_correlation.py  summarize_results.py  train_candidate_classifier.py  validate_preliminary_rules.py
tests/: conftest.py  test_candidate_detection.py  test_candidate_qc_memory.py  test_candidate_qc_writes.py  test_candidate_workflow.py  test_channel_comparison.py  test_channel_overlay.py  test_channel_overlay_histograms.py  test_config_and_native_qc.py  test_filenames.py  test_generation_source_audit.py  test_injection_mask_and_preliminary_strict.py  test_injection_mask_split.py  test_injection_override.py  test_manifest.py  (+18 more)
(+40 files in other folders)
